Fix button text alignment

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -11,6 +11,8 @@ $border-style: solid;
   font-size: 2rem;
   font-weight: bold;
   padding: 0.8rem 1.5rem;
+  display: flex;
+  align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
   // TODO: Function that takes in main colour and background, and returns button style
@@ -54,8 +56,7 @@ $border-style: solid;
   }
 
   &--icon {
-    display: flex;
-    align-items: center;
+    column-gap: 0.5rem;
   }
 
   &--search {
